--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-hooks-testing-library": "^0.6.0",
     "react-scripts": "3.0.0",
     "react-test-renderer": "^16.9.0"
   },
@@ -41,6 +40,7 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
+    "@test-libray/react-hooks": "^0.6.0",
     "babel-loader": "^8.0.5",
     "node-sass": "^4.14.0"
   },
